--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "clean": "tsc --build --clean",
     "start": "ts-node src/lib.ts",
     "test": "mocha -r ts-node/register tests/**/*.test.ts",
-    "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test"
+    "coverage": "nyc -r lcov -e .ts -x \"*.test.ts\" npm run test",
+	"prepare": "npm run clean && npm run build",
+	"prepublishOnly" : "npm test",
+	"version" : "git add -A src",
+	"postversion" : "git push && git push --tags"
   },
   "dependencies": {
     "canvas": "^2.6.1",
