--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   },
   "devDependencies": {
     "@types/chai": "^4.2.14",
+    "@types/chai-as-promised": "^7.1.3",
     "@types/mocha": "^8.0.4",
     "@types/node": "^14.14.10",
     "@types/pdfjs-dist": "^2.1.6",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "mocha": "^8.2.1",
     "nyc": "^15.1.0",
     "ts-node": "^9.0.0",
